# z-wallet-core

./: .gitignore  Cargo.toml  README.md  build.rs  deny.toml  release-plz.toml
src/: builder.rs  constants.rs  eip712.rs  error.rs  lib.rs  message.rs  tx.rs  validate.rs  wasm.rs
tests/: integration_tests.rs  signature_tests.rs  vault_tests.rs  wallet_core_tests.rs  wasm_tests.rs
