[package]
name = "z_wallet_core"
authors = ["Zeno Studio <zenostudio@proton.me>"]
version = "0.1.0"
edition = "2024"
description = "Crypto wallet core"
keywords = ["wallet", "ethereum", "core"]
repository = "https://github.com/zeno-studio/z-wallet-core"
homepage = "https://zeno.pw"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
airgap = [] 

[lints.clippy]
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
panic = { level = "deny", priority = 1 }

[dependencies]
alloy-signer-local = { version = "1.0.32", features = ["mnemonic"] }
alloy-primitives = "1.3.1"
alloy-signer = "1.0.32"
alloy-network = "1.0.33"
alloy-eip7702 = "0.6.3"
alloy-consensus = "1.0.36"
argon2 = "0.5.3"
bip39 = { version = "2.2.0", features = [ "zeroize"] }
chacha20poly1305 = "0.10.1"
zeroize = "1.8.1"
hex = "0.4.3"
getrandom = "0.3.4"
bs58 = "0.5.1"

