[package]
name = "yami_wallet_core"
authors = ["Yami Labs <0x8801@proton.me>"]
version = "0.1.0"
edition = "2024"
description = "Crypto wallet core"
keywords = ["wallet", "ethereum", "core"]
repository = "https://github.com/yami-labs/yami-wallet-core"
homepage = "https://yami.sh"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
airgap = []
wasm = ["wasm-bindgen", "js-sys"]

[lints.clippy]
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
panic = { level = "deny", priority = 1 }

[profile.release]
opt-level = "z"     # 最优化大小
lto = "thin"        # -thin LTO，平衡大小和编译时间
codegen-units = 1
panic = "abort"
strip = true

# WASM特定优化
[profile.wasm-release]
inherits = "release"
opt-level = "z"

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
alloy-signer-local = { version = "1.0.32", features = ["mnemonic"] }
alloy-primitives = "1.3.1"
alloy-signer = "1.0.32"
alloy-network = { version = "1.0.33", default-features = false }
alloy-eip7702 = "0.6.3"
alloy-consensus = { version = "1.0.36", default-features = false }
argon2 = "0.5.3"
bip39 = { version = "2.2.0", features = [ "zeroize"] }
chacha20poly1305 = "0.10.1"
zeroize = "1.8.1"
hex = "0.4.3"
getrandom = { version = "0.2", features = ["js"] }
bs58 = "0.5.1"
js-sys = { version = "0.3.91", optional = true }
alloy-rlp = "0.3"
